[tool.poetry]
name = "idea"
version = "0.1.0"
description = ""
authors = ["Alexei Lapitski <alexey.lapitski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
alembic = "^1.11.0"
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.13"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
